k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-argocd
  labels:
    app: hello-argocd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-argocd
  template:
    metadata:
      labels:
        app: hello-argocd
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: hello-argocd
        image: prhramos/hello-argocd:c0fb2fa
        ports:
        - containerPort: 5000
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
