k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-argocd
  labels:
    app: hello-argocd
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: hello-argocd
